src/ui/snapshots/state/migration/tagging/in_progress.snap
---
source: src/ui/state/migration/tagging.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"  ┌Tagging Progress──────────────────────────────────────────────────────────┐  "
"  │████████████████████████      Tagged 1/3 PRs                              │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Status────────────────────────────────────────────────────────────────────┐  "
"  │                         🏃 Tagging in Progress...                        │  " Hidden by multi-width symbols: [(29, " ")]
"  │                                                                          │  "
"  │                           Batch: 0/0 | Time: 0s                          │  "
"  │                           Tag: 'merged/v1.0.0'                           │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Errors────────────────────────────────────────────────────────────────────┐  "
"  │                                 No errors                                │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Help──────────────────────────────────────────────────────────────────────┐  "
"  │                    Tagging PRs in parallel batches...                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"                                                                                "
