src/ui/snapshots/state/migration/tagging/success.snap
---
source: src/ui/state/migration/tagging.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"  ┌Tagging Progress──────────────────────────────────────────────────────────┐  "
"  │██████████████████████████████Tagged 5/5 PRs █████████████████████████████│  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Status────────────────────────────────────────────────────────────────────┐  "
"  │                          ✅ Migration Complete!                          │  " Hidden by multi-width symbols: [(30, " ")]
"  │                                                                          │  "
"  │                           Tag: 'merged/v1.0.0'                           │  "
"  │                                                                          │  "
"  │                               Total PRs: 5                               │  "
"  │                               ✅ Tagged: 5                               │  " Hidden by multi-width symbols: [(35, " ")]
"  │                               ❌ Failed: 0                               │  " Hidden by multi-width symbols: [(35, " ")]
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Errors────────────────────────────────────────────────────────────────────┐  "
"  │                               ✅ No errors                               │  " Hidden by multi-width symbols: [(35, " ")]
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌Help──────────────────────────────────────────────────────────────────────┐  "
"  │                       Migration tagging completed!                       │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"                                                                                "
