src/ui/snapshots/state/migration/tagging/success_with_errors.snap
---
source: src/ui/state/migration/tagging.rs
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌Tagging Progress──────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │██████████████████████████████████████████████████Tagged 5/5 PRs █████████████████████████████████████████████████│  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                        ⚠️  Migration Complete with Errors                                        │  " Hidden by multi-width symbols: [(44, " ")]
"  │                                                                                                                  │  "
"  │                                               Tag: 'merged/v1.0.0'                                               │  "
"  │                                                                                                                  │  "
"  │                                                   Total PRs: 5                                                   │  "
"  │                                                   ✅ Tagged: 3                                                   │  " Hidden by multi-width symbols: [(55, " ")]
"  │                                                   ❌ Failed: 2                                                   │  " Hidden by multi-width symbols: [(55, " ")]
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Errors (2)────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │#123 Fix authentication bug: Network timeout                                                                      │  "
"  │#456 Update dependencies: Permission denied                                                                       │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                           Migration tagging completed!                                           │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
