src/ui/snapshots/state/migration/tagging/zero_progress.snap
---
source: src/ui/state/migration/tagging.rs
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌Tagging Progress──────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                 Tagged 0/10 PRs                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                             🏃 Tagging in Progress...                                            │  " Hidden by multi-width symbols: [(49, " ")]
"  │                                                                                                                  │  "
"  │                                               Batch: 0/0 | Time: 0s                                              │  "
"  │                                               Tag: 'merged/v1.0.0'                                               │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Errors────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                                     No errors                                                    │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                        Tagging PRs in parallel batches...                                        │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
